implement necromancer perk tree

--- a/localization/english/ctda_necromancer_tree_perks_l_english.yml
+++ b/localization/english/ctda_necromancer_tree_perks_l_english.yml
@@ -1,3 +1,11 @@
 ﻿l_english:
-  ctda_necromancer_novice_perk_name:0 "Necromancer Novice"
+  ctda_rumors_of_necromancy_name:0 "Rumors of Necromancy"
   ctda_believer_of_death_perk_name:0 "Believer of Death"
+  ctda_necromancer_novice_perk_name:0 "Necromancer Novice"
+  ctda_necromancer_apprentice_perk_name:0 "Necromancer Apprentice"
+  ctda_seek_for_knowledge_perk_name:0 "Seek for Knowledge"
+  ctda_knowledge_gatherings_perk_name:0 "Knowledge Gatherings"
+  ctda_necromancer_adept_perk_name:0 "Necromancer Adept"
+  ctda_necromancer_expert_perk_name:0 "Necromancer Expert"
+  ctda_ceremonial_grounds_perk_name:0 "Ceremonial Grounds"
+  ctda_necromancer_master_perk_name:0 "Necromancer Master"
