--- a/localization/english/ctda_events_l_english.yml
+++ b/localization/english/ctda_events_l_english.yml
@@ -6,3 +6,9 @@
   ctda_activity_practice_necromancy_events.1.c:0 "Find a grimoire"
   ctda_activity_practice_necromancy_events.1.d:0 "Study grimoire"
   ctda_activity_practice_necromancy_events.1.e:0 "Raise corpse"
+  ctda_activity_practice_necromancy_events.2.t:0 "$ctda_activity_practice_necromancy_events.1.t$ successful"
+  ctda_activity_practice_necromancy_events.2.desc:0 "I found some interesting corpses which allowed me to get deeper understanding of the dark arts."
+  ctda_activity_practice_necromancy_events.2.a:0 "There is much more to learn."
+  ctda_activity_practice_necromancy_events.3.t:0 "$ctda_activity_practice_necromancy_events.1.t$ failed"
+  ctda_activity_practice_necromancy_events.3.desc:0 "I found some corpses but I wasn't able to learn anything from them."
+  ctda_activity_practice_necromancy_events.3.a:0 "Maybe next time."
