--- a/localization/english/ctda_lifestyles_l_english.yml
+++ b/localization/english/ctda_lifestyles_l_english.yml
@@ -2,3 +2,11 @@
   ctda_necromancer_lifestyle_name:0 "Necromancy"
   ctda_necromancer_lifestyle_desc:0 "Necromancy, commonly called the dark arts, particularly deals with enslavement and utilization of involuntary souls and their bodies. The lores of necromancy are old and powerful, the accquision of this knowledge is stressful."
   ctda_necromancer_lifestyle_highlight_desc:0 "$ctda_necromancer_lifestyle_desc$"
+  monthly_ctda_necromancer_lifestyle_xp_gain_mult:0 "Monthly legacy [ctda_necromancer|E] Experience"
+
+  GAINS_CTDA_NECROMANCER_LIFESTYLE_XP:2 "Gains $VALUE|V0$ [ctda_necromancer|E] Experience"
+  GAINED_CTDA_NECROMANCER_LIFESTYLE_XP:2 "Gained $VALUE|V0$ [ctda_necromancer|E] Experience"
+  I_GAIN_CTDA_NECROMANCER_LIFESTYLE_XP:2 "You gain $VALUE|V0$ [ctda_necromancer|E] Experience"
+  I_GAINED_CTDA_NECROMANCER_LIFESTYLE_XP:2 "You gained $VALUE|V0$ [ctda_necromancer|E] Experience"
+  TARGET_GAINS_CTDA_NECROMANCER_LIFESTYLE_XP:2 "[CHARACTER.GetShortUIName|U] gains $VALUE|V0$ [ctda_necromancer|E] Experience"
+  TARGET_GAINED_CTDA_NECROMANCER_LIFESTYLE_XP:2 "[CHARACTER.GetShortUIName|U] gained $VALUE|V0$ [ctda_necromancer|E] Experience"
