add some localization + add more for decision
maybe i refactor the decision, the activity stuff is not necessary atm

--- a/localization/english/ctda_decisions_l_english.yml
+++ b/localization/english/ctda_decisions_l_english.yml
@@ -1,3 +1,5 @@
 ﻿l_english:
   ctda_decision_practice_necromancy:0 "Practice Necromancy"
   ctda_decision_practice_necromancy_desc:0 "Perform necromantic actions to gain more knowledge and perhaps artifacts or minions."
+  ctda_decision_practice_necromancy_tooltip:0 "$ctda_decision_practice_necromancy_desc$"
+  ctda_decision_practice_necromancy_confirm:0 "Start practicing"
