--- a/localization/english/ctda_focuses_l_english.yml
+++ b/localization/english/ctda_focuses_l_english.yml
@@ -1,7 +1,11 @@
 ﻿l_english:
-  ctda_necromancer_knowledge_focus_name:0 "Knowledge"
+  ctda_necromancer_tree_name:0 "Necromancer"
+  ctda_necromancer_knowledge_focus:0 "Knowledge"
   ctda_necromancer_knowledge_focus_desc:0 "Focus on learning more from the dark arts."
-  ctda_necromancer_meditation_focus_name:0 "Meditation"
+  ctda_necromancer_knowledge_focus_effect_desc:0 "Focusing on Knowledge grants:"
+  ctda_necromancer_meditation_focus:0 "Meditation"
   ctda_necromancer_meditation_focus_desc:0 "Focus on dedication of the dark arts."
-  ctda_necromancer_secrecy_focus_name:0 "Secrecy"
+  ctda_necromancer_meditation_focus_effect_desc:0 "Focusing on Meditation grants:"
+  ctda_necromancer_secrecy_focus:0 "Secrecy"
   ctda_necromancer_secrecy_focus_desc:0 "Focus on hiding practices of the dark arts."
+  ctda_necromancer_secrecy_focus_effect_desc:0 "Focusing on Secrecy grants:"
