--- a/localization/english/ctda_traits_l_english.yml
+++ b/localization/english/ctda_traits_l_english.yml
@@ -1,5 +1,6 @@
 ﻿l_english:
 
+  trait_ctda_necromancer:0 "Necromancer"
   trait_ctda_necromancer_1:0 "Necromancer (Novice)"
   trait_ctda_necromancer_2:0 "Necromancer (Apprentice)"
   trait_ctda_necromancer_3:0 "Necromancer (Adept)"
