--- a/localization/english/ctda_decisions_l_english.yml
+++ b/localization/english/ctda_decisions_l_english.yml
@@ -1,5 +1,5 @@
 ﻿l_english:
-  ctda_decision_practice_necromancy:0 "Practice Necromancy"
-  ctda_decision_practice_necromancy_desc:0 "Perform necromantic actions to gain more knowledge and perhaps artifacts or minions."
-  ctda_decision_practice_necromancy_tooltip:0 "$ctda_decision_practice_necromancy_desc$"
-  ctda_decision_practice_necromancy_confirm:0 "Start practicing"
+  ctda_decision_embrace_necromancy:0 "Embrace Necromancy"
+  ctda_decision_embrace_necromancy_desc:0 "Embracing necromancy will clear the mind for the journey into the dark arts. Becoming a necromancer will open up new oppurnities."
+  ctda_decision_embrace_necromancy_tooltip:0 "$ctda_decision_practice_necromancy_desc$"
+  ctda_decision_embrace_necromancy_confirm:0 "I become a necromancer"
